/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.protobuf:protobuf-java:4.28.1' // для spark закомментировать
    implementation 'com.google.protobuf:protobuf-java-util:4.28.1' // для spark закомментировать
    implementation 'io.protostuff:protostuff-core:1.8.0'
    implementation 'io.protostuff:protostuff-runtime:1.8.0'
    implementation 'org.apache.avro:avro:1.12.0'
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    implementation 'org.apache.spark:spark-core_2.12:3.2.4'
    implementation 'org.apache.spark:spark-sql_2.12:3.2.4'
    implementation 'org.codehaus.janino:janino:3.0.16'
    implementation 'org.slf4j:slf4j-reload4j:2.0.16'

    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
    testImplementation 'org.jeasy:easy-random-core:5.0.0'
    testImplementation 'org.slf4j:slf4j-nop:2.0.7'

    testImplementation 'org.apache.spark:spark-sql_2.12:3.2.4'
    testImplementation 'org.slf4j:slf4j-reload4j:2.0.16'
}

test {
    useJUnitPlatform()

    jvmArgs = [
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
            "--add-opens=java.base/java.io=ALL-UNNAMED",
            "--add-opens=java.base/java.net=ALL-UNNAMED",
            "--add-opens=java.base/java.nio=ALL-UNNAMED",
            "--add-opens=java.base/java.util=ALL-UNNAMED",
            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
            "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
            "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
            "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
            "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
    ]
}

compileTestJava {
    options.compilerArgs.add('--add-exports=java.base/sun.nio.ch=ALL-UNNAMED')
}

compileJava {
    options.compilerArgs.add('--add-exports=java.base/sun.nio.ch=ALL-UNNAMED')
}

jar {
    manifest {
        attributes(
                'Main-Class': 'ru.itmo.hasd.Main'
        )
    }
}

group = 'ru.itmo.hasd'
version = '1.0-SNAPSHOT'
description = 'saving-compression-algorithms'
java.sourceCompatibility = JavaVersion.VERSION_17 // Для Spark переключить на 11
